cps/static/css/style.css
/* ... */
.container-fluid .book {
  margin-top: 20px;
  max-width: 180px;
  display: flex;
  flex-direction: column;
}
.cover {
  margin-bottom: 10px;
}

.container-fluid .book .cover {
  height: 225px;
  position: relative;
}

.author-link img {
  display: block;
  height: 100%;
}

.author-bio img {
  margin: 0 1em 1em 0;
}

.container-fluid .single .cover img {
  border: 1px solid #fff;
  box-sizing: border-box;
  -webkit-box-shadow: 0 5px 8px -6px #777;
  -moz-box-shadow: 0 5px 8px -6px #777;
  box-shadow: 0 5px 8px -6px #777;
}

.datepicker.form-control {
  position: static;
}

.container-fluid .book .cover span .img {
  bottom: 0;
  height: 100%;
  position: absolute;
}

.container-fluid .book .cover span img {
  /* border: 1px solid #fff; */
  position: relative;
  height: 100%;

  box-sizing: border-box;
  -webkit-box-shadow: 0 5px 8px -6px #777;
  -moz-box-shadow: 0 5px 8px -6px #777;
  box-shadow: 0 5px 8px -6px #777;
}

.container-fluid .book .meta {
  margin-top: 10px;
}
.media-body p {
  text-align: justify;
}
.container-fluid .book .meta p {
  margin: 0;
}

.container-fluid .book .meta .title {
  font-weight: bold;
  font-size: 15px;
  color: #444;
}

.container-fluid .book .meta .series {
  font-weight: 400;
  font-size: 12px;
  color: #444;
}

.container-fluid .book .meta .author {
  font-size: 12px;
  color: #999;
}

.container-fluid .book .meta .rating {
  margin-top: 5px;
}
.rating .glyphicon-star-empty {
  color: #ffffff82;
}
.rating .glyphicon-star.good {
  color: #444;
}
.rating-clear .glyphicon-remove {
  color: #333;
}

.container-fluid .author .author-hidden,
.container-fluid .author .author-hidden-divider {
  display: none;
}

.navbar-brand {
  font-family: "Grand Hotel", cursive;
  font-size: 35px;
  color: #45b29d !important;
}

.more-stuff {
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid #ccc;
}

.more-stuff > li {
  margin-bottom: 10px;
}
.navbar-collapse.in .navbar-nav {
  margin: 0;
}

span.glyphicon.glyphicon-tags {
  padding-right: 5px;
  color: #999;
  vertical-align: text-top;
}

.book-meta {
  padding-bottom: 20px;
}

.navbar-default .navbar-toggle .icon-bar {
  background-color: #000;
}
.navbar-default .navbar-toggle {
  border-color: #000;
}

.cover .badge {
  position: absolute;
  top: 2px;
  left: 2px;
  color: #000;
  border-radius: 10px;
  background-color: #fff;
}

.cover .read {
  position: relative;
  top: -20px;
  /*left: auto;
    right: 2px;*/
  width: 17px;
  height: 17px;
  display: inline-block;
  padding: 2px;
}
.cover-height {
  max-height: 100px;
}

.col-sm-2 a .cover-small {
  margin: 5px;
  max-height: 200px;
}

.btn-file {
  position: relative;
  overflow: hidden;
}

.btn-file input[type="file"] {
  position: absolute;
  top: 0;
  right: 0;
  min-width: 100%;
  min-height: 100%;
  font-size: 100px;
  text-align: right;
  filter: alpha(opacity=0);
  opacity: 0;
  outline: none;
  background: white;
  cursor: inherit;
  display: block;
}

.btn-toolbar .btn,
.discover .btn {
  margin-bottom: 5px;
}
.button-link {
  color: #fff;
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active,
.btn-primary.active,
.open .dropdown-toggle.btn-primary {
  background-color: #1c5484;
}

.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
  background-color: #89b9e2;
}

.btn-toolbar > .btn + .btn,
.btn-toolbar > .btn-group + .btn,
.btn-toolbar > .btn + .btn-group,
.btn-toolbar > .btn-group + .btn-group {
  margin-left: 0;
}

/* Loading spinner (fork: @jbelascoain).
 * Pure-CSS rotating ring that replaces the old, pixelated
 * `loading-icon.gif`. The `.spinner` / `.spinner2` wrappers (admin
 * Restart/Status modals, config_db.html, config_edit.html,
 * cwa_settings.html) center a single `.css-spinner` element. Scales
 * crisply at any size and follows the theme's primary color. */
.spinner,
.spinner2 {
  display: flex;
  justify-content: center;
  margin: 10px 0;
}
.css-spinner {
  width: 48px;
  height: 48px;
  border: 5px solid rgba(128, 128, 128, 0.25);
  border-top-color: var(--color-primary, #45b29d);
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: none;
  animation: css-spinner-rotate 0.8s linear infinite;
}
@keyframes css-spinner-rotate {
  to { transform: rotate(360deg); }
}
/* Respect users who prefer less motion: spin slower rather than freeze. */
@media (prefers-reduced-motion: reduce) {
  .css-spinner { animation-duration: 2.4s; }
}
#support_pack {
  margin-bottom: 10px;
  margin-left: 8px;
}
.intend-form {
  margin-left: 20px;
}

table .bg-dark-danger {
  background-color: #d9534f;
  color: #fff;
}
table .bg-dark-danger:hover {
  background-color: #c9302c;
}
table .bg-primary:hover {
  background-color: #1c5484;
}
.block-label {
  display: block;
}

.form-control.fake-input {
  position: absolute;
  pointer-events: none;
  top: 0;
}

input.pill {
  position: absolute;
  opacity: 0;
}

input.pill + label {
  border: 2px solid #45b29d;
  border-radius: 15px;
  color: #45b29d;
  cursor: pointer;
  display: inline-block;
  padding: 3px 15px;
  user-select: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

input.pill:checked + label {
  background-color: #45b29d;
  border-color: #fff;
  color: #fff;
}

input.pill:not(:checked) + label .glyphicon {
  display: none;
}

.author-link {
  display: inline-block;
  margin-top: 10px;
  width: 100px;
}

#remove-from-shelves .btn,
#shelf-action-errors {
  margin-left: 5px;
}

.tags_click,
.serie_click,
.language_click {
  margin-right: 5px;
}

#meta-info {
  height: 600px;
  overflow-y: scroll;
}
/* ... */

